# didactic-parakeet

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  REUSE.toml  main.c
